lab_3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
    nodePort: 31110
  selector:
    app: frontend
