lab_3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yanis-ingress
spec:
  tls:
  - hosts:
    - itdt.yanis
    secretName: yanis
  rules:
  - host: yanis
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 3000
